added trend view and landing screen